# stevedore

./: .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .travis.yml  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  announce.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  run_sphinx  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst  install.rst  managers.rst  patterns_loading.rst  sphinxext.rst
doc/source/install/: index.rst
doc/source/tutorial/: creating_plugins.rst  driver_output.txt  extension_output.txt  loading.rst
doc/source/user/: history.rst  index.rst  patterns_loading.rst
doc/source/user/essays/: pycon2013.rst
doc/source/user/tutorial/: creating_plugins.rst  index.rst  loading.rst  naming.rst  testing.rst
docs/: Makefile  requirements.txt
docs/source/: conf.py  history.rst  index.rst  install.rst  loading.rst  managers.rst  patterns_enabling.rst  patterns_loading.rst
docs/source/essays/: pycon2013.rst
docs/source/tutorial/: calling.rst  creating_plugins.rst  design.rst  implementation.rst  index.rst  loading.rst  naming.rst  registration.rst  testing.rst
releasenotes/notes/: add-reno-996dd44974d53238.yaml  add-skip-caching-aa13be0299cc8b8c.yaml  conflict-resolution-12cd58160d48481a.yaml  deprecate-verify_requirements-33fe21fad9df33a1.yaml  deprecate-warn_on_missing_entrypoint-d7e3bf2d4421f4cc.yaml  drop-python-310-a175ee1330887985.yaml  drop-python2-support-3f0f717570cad8cb.yaml  entry-point-type-change-06ca3b301ba7aad1.yaml  expose-entry-point-properties-6f2d868d4342fc0d.yaml  module-name-property-d3b2d092259dadec.yaml  remove-extension-extras-attribute-c2c542c9a4dcd304.yaml  remove-py39-bd8db02ecf3cdb35.yaml
releasenotes/source/: conf.py  index.rst
stevedore/: __init__.py  _cache.py  dispatch.py  driver.py  enabled.py  exception.py  extension.py  hook.py  named.py  sphinxext.py
stevedore/example/: base.py  load_as_driver.py  load_as_extension.py  setup.py  simple.py
stevedore/example2/: fields.py  setup.py
stevedore/tests/: manager.py  test_cache.py  test_callback.py  test_dispatch.py  test_driver.py  test_enabled.py  test_example_fields.py  test_extension.py  test_hook.py  test_named.py  test_sphinxext.py  test_test_manager.py
