[metadata]
name = stevedore
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Manage dynamic plugins for Python applications
home-page = https://docs.openstack.org/stevedore/latest/
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Intended Audience :: Developers
    Environment :: Console

[extras]
docs =
  openstackdocstheme>=1.17.0 # Apache-2.0

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    stevedore

[entry_points]
stevedore.example.formatter =
    simple = stevedore.example.simple:Simple
    field = stevedore.example2.fields:FieldList
    plain = stevedore.example.simple:Simple

stevedore.test.extension =
    t1 = stevedore.tests.test_extension:FauxExtension
    t2 = stevedore.tests.test_extension:FauxExtension
    e1 = stevedore.tests.test_extension:BrokenExtension
    e2 = stevedore.tests.notfound:UnimportableExtension


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[pbr]
warnerrors = True

[wheel]
universal = true
