[metadata]
name = stevedore
description_file = README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = Manage dynamic plugins for Python applications
home_page = https://docs.openstack.org/stevedore/latest/
python_requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    Environment :: Console

[files]
packages =
    stevedore

[entry_points]
stevedore.example.formatter =
    simple = stevedore.example.simple:Simple
    field = stevedore.example2.fields:FieldList
    plain = stevedore.example.simple:Simple
stevedore.test.extension =
    t1 = stevedore.tests.test_extension:FauxExtension
    t2 = stevedore.tests.test_extension:FauxExtension
    e1 = stevedore.tests.test_extension:BrokenExtension
    e2 = stevedore.tests.notfound:UnimportableExtension
